# simple-attention

./: README.md  pyproject.toml  requirements.txt
training/: experiment.py  experiment.sh
